UMLClass refactor (#49)
* Refactored UMLClass to consolidate relationships into components arrayList. Added Parameters to UMLField and UMLParameter. Added setNewName method into UMLClass. Filled out logic for isValidName method.

* Refactored UMLClass to consolidate relationships into components arrayList. Added Parameters to UMLField and UMLParameter. Added setNewName method into UMLClass. Filled out logic for isValidName method.

* Refactored UMLClass to consolidate relationships into components arrayList. Added Parameters to UMLField and UMLParameter. Added setNewName method into UMLClass. Filled out logic for isValidName method.